# webdav-s3-adapter

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  platform.sh
.github/workflows/: release-dev.yml  release-prod.yml  release.yml
helm/: Chart.yaml
k8s/: Todo.txt  deployment.yaml
src/: main.rs
src/utils/: mod.rs  s3.rs  webdav.rs
