[package]
name = "webdav-s3-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["macros"], default-features = false }
salvo = { version = "0.67", features = ["full"], default-features = true }
tracing = "0"
tracing-subscriber = "0"
serde = { version = "1", features = ["derive"], default-features = false }
once_cell = { version = "1.19", default-features = false }