[package]
name = "webdav-s3-adapter"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[[bin]]
name = "webdav-s3-adapter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["macros"], default-features = false }
salvo = { version = "0.67", features = ["server", "quinn", "basic-auth", "logging"], default-features = false }
tracing = "0"
tracing-subscriber = "0"
serde = { version = "1", features = ["derive"], default-features = false }
once_cell = { version = "1.19", default-features = false }
aws-config = { version = "1", features = ["rt-tokio", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["rt-tokio", "behavior-version-latest"] }
validator = { version = "0", features = ["derive"], default-features = false }
uuid = { version = "1", features = ["fast-rng", "v4"] }
dotenv = "0.15.0"
xml-rs = "0.8.20"
